--- a/api/pom.xml
+++ b/api/pom.xml
@@ -15,12 +15,13 @@
  limitations under the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j</artifactId>
-    <version>2.0-alpha2-SNAPSHOT</version>
+    <version>2.0-alpha1-SNAPSHOT</version>
     <relativePath>../</relativePath>
   </parent>
   <groupId>org.apache.logging.log4j</groupId>
@@ -155,7 +156,7 @@
         <reportSets>
           <reportSet>
             <!-- Disabled at it kills the site generation via a NoClassDefFoundError -->
-            <reports />
+            <reports/>
           </reportSet>
         </reportSets>
       </plugin>
