--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     <version>9</version>
   </parent>
   <description>Apache Log4j 2</description>
-  <url>http://logging.apache.org/log4j/2.0/</url>
+  <url>http://logging.apache.org/log4j/2.x/</url>
   <issueManagement>
     <system>JIRA</system>
     <url>http://issues.apache.org/jira/browse/LOG4J2</url>
