--- a/pom.xml
+++ b/pom.xml
@@ -335,6 +335,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-project-info-reports-plugin</artifactId>
         <version>2.4</version>
+        <configuration>
+          <webAccessUrl>https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk</webAccessUrl>
+        </configuration>
       </plugin>
       <!-- Surefire report -->
       <plugin>
