--- a/flume-ng/pom.xml
+++ b/flume-ng/pom.xml
@@ -54,7 +54,7 @@
     <dependency>
       <groupId>org.apache.flume</groupId>
       <artifactId>flume-ng-core</artifactId>
-      <version>1.0.0-incubating</version>
+      <version>1.2.0</version>
       <exclusions>
         <exclusion>
           <groupId>org.slf4j</groupId>
