--- a/core/pom.xml
+++ b/core/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j</artifactId>
-    <version>2.0-alpha1-SNAPSHOT</version>
+    <version>2.0-alpha1</version>
     <relativePath>../</relativePath>
   </parent>
   <groupId>org.apache.logging.log4j</groupId>
@@ -182,7 +182,7 @@
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>2.8</version>
         <configuration>
-          <bottom>Copyright &#169; {inceptionYear}-{currentYear} {organizationName}. All Rights Reserved. Apache Logging, Apache Log4j, Log4j, Apache, the Apache feather logo, and the
+          <bottom>Copyright © {inceptionYear}-{currentYear} {organizationName}. All Rights Reserved. Apache Logging, Apache Log4j, Log4j, Apache, the Apache feather logo, and the
             Apache Logging project logo are trademarks of The Apache Software Foundation.</bottom>
           <!-- module link generation is completely broken in the javadoc plugin for a multi-module non-aggregating
          project -->
