--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
   <artifactId>log4j</artifactId>
   <packaging>pom</packaging>
   <name>Apache Log4j 2</name>
-  <version>2.0-alpha2-SNAPSHOT</version>
+  <version>2.0-alpha1-SNAPSHOT</version>
   <parent>
     <groupId>org.apache</groupId>
     <artifactId>apache</artifactId>
@@ -364,6 +364,7 @@
         <version>2.4</version>
         <configuration>
           <webAccessUrl>https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk</webAccessUrl>
+          <developerConnection>scm:svn:https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk</developerConnection>
         </configuration>
       </plugin>
       <!-- Surefire report -->
