--- a/pom.xml
+++ b/pom.xml
@@ -435,6 +435,7 @@
     <module>slf4j-impl</module>
     <module>jcl-bridge</module>
     <module>flume-ng</module>
+    <module>web</module>
   </modules>
   <profiles>
     <profile>
