--- a/flume-ng/pom.xml
+++ b/flume-ng/pom.xml
@@ -20,10 +20,10 @@
   <parent>
     <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j</artifactId>
-    <version>2.0-alpha3-SNAPSHOT</version>
+    <version>2.0-beta1-SNAPSHOT</version>
     <relativePath>../</relativePath>
   </parent>
-  <groupId>org.apache.logging.log4j</groupId>
+  <groupId>org.apache.logging.log4j.adapters</groupId>
   <artifactId>log4j-flume-ng</artifactId>
   <packaging>jar</packaging>
   <name>Log4J Flume NG</name>
@@ -44,11 +44,11 @@
       <artifactId>log4j-core</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
+      <groupId>org.apache.logging.log4j.adapters</groupId>
       <artifactId>slf4j-impl</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
+      <groupId>org.apache.logging.log4j.adapters</groupId>
       <artifactId>log4j12-api</artifactId>
     </dependency>
     <dependency>
