--- a/flume-og/pom.xml
+++ b/flume-og/pom.xml
@@ -21,10 +21,10 @@
   <parent>
     <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j</artifactId>
-    <version>2.0-alpha2-SNAPSHOT</version>
+    <version>2.0-beta1-SNAPSHOT</version>
     <relativePath>../</relativePath>
   </parent>
-  <groupId>org.apache.logging.log4j</groupId>
+  <groupId>org.apache.logging.log4j.adapters</groupId>
   <artifactId>log4j-flume-og</artifactId>
   <packaging>jar</packaging>
   <name>Log4J Flume OG</name>
@@ -42,7 +42,7 @@
       <artifactId>log4j-core</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
+      <groupId>org.apache.logging.log4j.adapters</groupId>
       <artifactId>slf4j-impl</artifactId>
     </dependency>
     <dependency>
