--- a/jcl-bridge/pom.xml
+++ b/jcl-bridge/pom.xml
@@ -20,12 +20,12 @@
   <parent>
     <artifactId>log4j</artifactId>
     <groupId>org.apache.logging.log4j</groupId>
-    <version>2.0-alpha3-SNAPSHOT</version>
+    <version>2.0-beta1-SNAPSHOT</version>
     <relativePath>../</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.apache.logging.log4j</groupId>
+  <groupId>org.apache.logging.log4j.adapters</groupId>
   <artifactId>log4j-jcl</artifactId>
   <packaging>jar</packaging>
   <name>Log4J Commons Logging</name>
