--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
   <artifactId>log4j</artifactId>
   <packaging>pom</packaging>
   <name>Apache Log4j 2</name>
-  <version>2.0-alpha3-SNAPSHOT</version>
+  <version>2.0-beta1-SNAPSHOT</version>
   <parent>
     <groupId>org.apache</groupId>
     <artifactId>apache</artifactId>
@@ -90,7 +90,7 @@
     <slf4j.version>1.7.0</slf4j.version>
     <logback.version>1.0.7</logback.version>
     <log4jParentDir>${basedir}</log4jParentDir>
-    <Log4jReleaseVersion>2.0-alpha3</Log4jReleaseVersion>
+    <Log4jReleaseVersion>2.0-beta1</Log4jReleaseVersion>
     <!-- Configuration properties for the OSGi maven-bundle-plugin -->
     <osgi.symbolicName>org.apache.commons.${project.artifactId}</osgi.symbolicName>
     <osgi.export>org.apache.logging.log4j.*;version=${project.version};-noimport:=true</osgi.export>
@@ -149,17 +149,17 @@
         <type>test-jar</type>
       </dependency>
       <dependency>
-        <groupId>org.apache.logging.log4j</groupId>
+        <groupId>org.apache.logging.log4j.adapters</groupId>
         <artifactId>slf4j-impl</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.apache.logging.log4j</groupId>
+        <groupId>org.apache.logging.log4j.adapters</groupId>
         <artifactId>log4j-jcl</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.apache.logging.log4j</groupId>
+        <groupId>org.apache.logging.log4j.adapters</groupId>
         <artifactId>log4j12-api</artifactId>
         <version>${project.version}</version>
       </dependency>
