--- a/web/pom.xml
+++ b/web/pom.xml
@@ -20,10 +20,10 @@
   <parent>
     <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j</artifactId>
-    <version>2.0-alpha3-SNAPSHOT</version>
+    <version>2.0-beta1-SNAPSHOT</version>
     <relativePath>../</relativePath>
   </parent>
-  <groupId>org.apache.logging.log4j</groupId>
+  <groupId>org.apache.logging.log4j.adapters</groupId>
   <artifactId>log4j-web</artifactId>
   <packaging>jar</packaging>
   <name>Log4j Web Adapters</name>
