--- a/pom.xml
+++ b/pom.xml
@@ -350,7 +350,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-changes-plugin</artifactId>
-        <version>2.6</version>
+        <version>2.8</version>
         <reportSets>
           <reportSet>
             <reports>
@@ -362,6 +362,7 @@
         <configuration>
           <statusIds>Resolved, Closed</statusIds>
           <columnNames>Type,Key,Summary,Assignee,Status,Resolution,Fix Version</columnNames>
+          <useJql>true</useJql>
         </configuration>
       </plugin>
       <plugin>
