--- a/api/pom.xml
+++ b/api/pom.xml
@@ -52,7 +52,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-changes-plugin</artifactId>
-        <version>2.6</version>
+        <version>2.8</version>
         <reportSets>
           <reportSet>
             <reports>
@@ -62,6 +62,7 @@
         </reportSets>
         <configuration>
           <issueLinkTemplate>%URL%/show_bug.cgi?id=%ISSUE%</issueLinkTemplate>
+          <useJql>true</useJql>
         </configuration>
       </plugin>
       <plugin>
