--- a/flume-ng/pom.xml
+++ b/flume-ng/pom.xml
@@ -147,7 +147,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-changes-plugin</artifactId>
-        <version>2.6</version>
+        <version>2.8</version>
         <reportSets>
           <reportSet>
             <reports>
@@ -157,6 +157,7 @@
         </reportSets>
         <configuration>
           <issueLinkTemplate>%URL%/show_bug.cgi?id=%ISSUE%</issueLinkTemplate>
+          <useJql>true</useJql>
         </configuration>
       </plugin>
       <plugin>
