--- a/log4j12-api/pom.xml
+++ b/log4j12-api/pom.xml
@@ -60,7 +60,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-changes-plugin</artifactId>
-            <version>2.6</version>
+            <version>2.8</version>
             <reportSets>
               <reportSet>
                 <reports>
@@ -70,6 +70,7 @@
             </reportSets>
             <configuration>
               <issueLinkTemplate>%URL%/show_bug.cgi?id=%ISSUE%</issueLinkTemplate>
+              <useJql>true</useJql>
             </configuration>
           </plugin>
           <plugin>
