--- a/core/pom.xml
+++ b/core/pom.xml
@@ -146,7 +146,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-changes-plugin</artifactId>
-        <version>2.8</version>
+        <version>${changes.plugin.version}</version>
         <reportSets>
           <reportSet>
             <reports>
