--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,7 @@
     <osgi.dynamicImport />
     <osgi.private />
     <pmd.plugin.version>2.7.1</pmd.plugin.version>
+    <changes.plugin.version>2.8</changes.plugin.version>
     <manifestfile>target/osgi/MANIFEST.MF</manifestfile>
     <maven.compile.source>1.5</maven.compile.source>
     <maven.compile.target>1.5</maven.compile.target>
@@ -195,7 +196,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-changes-plugin</artifactId>
-          <version>2.8</version>
+          <version>${changes.plugin.version}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -363,7 +364,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-changes-plugin</artifactId>
-        <version>2.8</version>
+        <version>${changes.plugin.version}</version>
         <reportSets>
           <reportSet>
             <reports>
@@ -484,7 +485,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-changes-plugin</artifactId>
-            <version>2.8</version>
+            <version>${changes.plugin.version}</version>
             <configuration>
               <template>announcement.vm</template>
               <templateDirectory>src/changes</templateDirectory>
