--- a/flume-og/pom.xml
+++ b/flume-og/pom.xml
@@ -120,7 +120,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.8</version>
+        <version>${javadoc.plugin.version}</version>
         <configuration>
           <!-- module link generation is completely broken in the javadoc plugin for a multi-module non-aggregating
          project -->
