--- a/jcl-bridge/pom.xml
+++ b/jcl-bridge/pom.xml
@@ -92,7 +92,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
-            <version>2.8</version>
+            <version>${javadoc.plugin.version}</version>
             <configuration>
               <bottom>Copyright © {inceptionYear}-{currentYear} {organizationName}. All Rights Reserved. Apache Logging, Apache Log4j, Log4j, Apache, the Apache feather logo, and the
                 Apache Logging project logo are trademarks of The Apache Software Foundation.</bottom>
