--- a/web/pom.xml
+++ b/web/pom.xml
@@ -73,7 +73,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-changes-plugin</artifactId>
-            <version>2.6</version>
+            <version>${changes.plugin.version}</version>
             <reportSets>
               <reportSet>
                 <reports>
