--- a/pom.xml
+++ b/pom.xml
@@ -463,8 +463,9 @@
   </distributionManagement>
   <modules>
     <module>api</module>
-    <module>log4j12-api</module>
     <module>core</module>
+    <module>combined</module>
+    <module>log4j12-api</module>
     <module>slf4j-impl</module>
     <module>jcl-bridge</module>
     <module>flume-ng</module>
