--- a/flume-ng/pom.xml
+++ b/flume-ng/pom.xml
@@ -45,7 +45,7 @@
     </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j.adapters</groupId>
-      <artifactId>slf4j-impl</artifactId>
+      <artifactId>log4j-slf4j-impl</artifactId>
     </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j.adapters</groupId>
