--- a/pom.xml
+++ b/pom.xml
@@ -158,7 +158,7 @@
       </dependency>
       <dependency>
         <groupId>org.apache.logging.log4j.adapters</groupId>
-        <artifactId>slf4j-impl</artifactId>
+        <artifactId>log4j-slf4j-impl</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
@@ -464,7 +464,6 @@
   <modules>
     <module>api</module>
     <module>core</module>
-    <module>combined</module>
     <module>log4j12-api</module>
     <module>slf4j-impl</module>
     <module>jcl-bridge</module>
