--- a/slf4j-impl/pom.xml
+++ b/slf4j-impl/pom.xml
@@ -24,7 +24,7 @@
     <relativePath>../</relativePath>
   </parent>
   <groupId>org.apache.logging.log4j.adapters</groupId>
-  <artifactId>slf4j-impl</artifactId>
+  <artifactId>log4j-slf4j-impl</artifactId>
   <packaging>jar</packaging>
   <name>Apache Log4j SLF4J Binding</name>
   <description>Binding between SLF4J API and Log4J2 Core</description>
