--- a/pom.xml
+++ b/pom.xml
@@ -117,10 +117,6 @@
       <id>apache.snapshots</id>
       <url>http://repository.apache.org/snapshots/</url>
     </pluginRepository>
-    <pluginRepository>
-      <id>maven.snapshots</id>
-      <url>https://repository.apache.org/content/repositories/maven-018/</url>
-    </pluginRepository>
   </pluginRepositories>
   <dependencyManagement>
     <dependencies>
@@ -370,7 +366,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-pdf-plugin</artifactId>
-        <version>1.2</version>
+        <version>1.2-SNAPSHOT</version>
         <executions>
           <execution>
             <id>pdf</id>
