--- a/pom.xml
+++ b/pom.xml
@@ -136,7 +136,8 @@
     <log4jParentDir>${basedir}</log4jParentDir>
     <Log4jReleaseVersion>2.0-beta8</Log4jReleaseVersion>
     <Log4jReleaseCount>tenth</Log4jReleaseCount>
-    <jackson.version>2.2.2</jackson.version>
+    <jackson1.version>1.9.13</jackson1.version>
+    <jackson2.version>2.2.2</jackson2.version>
     <flumeVersion>1.3.1</flumeVersion>
     <disruptor.version>3.2.0</disruptor.version>
     <!-- Configuration properties for the OSGi maven-bundle-plugin -->
@@ -353,25 +354,25 @@
       <dependency>
         <groupId>org.codehaus.jackson</groupId>
         <artifactId>jackson-core-asl</artifactId>
-        <version>1.9.13</version>
+        <version>${jackson1.version}</version>
         <scope>runtime</scope>
       </dependency>
       <dependency>
         <groupId>org.codehaus.jackson</groupId>
         <artifactId>jackson-mapper-asl</artifactId>
-        <version>1.9.13</version>
+        <version>${jackson1.version}</version>
         <scope>runtime</scope>
       </dependency>
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-core</artifactId>
-        <version>${jackson.version}</version>
+        <version>${jackson2.version}</version>
         <optional>true</optional>
       </dependency>
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
-        <version>${jackson.version}</version>
+        <version>${jackson2.version}</version>
         <optional>true</optional>
       </dependency>
       <dependency>
