--- a/pom.xml
+++ b/pom.xml
@@ -134,8 +134,8 @@
     <slf4j.version>1.7.5</slf4j.version>
     <logback.version>1.0.13</logback.version>
     <log4jParentDir>${basedir}</log4jParentDir>
-    <Log4jReleaseVersion>2.0-beta8</Log4jReleaseVersion>
-    <Log4jReleaseCount>tenth</Log4jReleaseCount>
+    <Log4jReleaseVersion>2.0-beta9</Log4jReleaseVersion>
+    <Log4jReleaseCount>eleventh</Log4jReleaseCount>
     <jackson1.version>1.9.13</jackson1.version>
     <jackson2.version>2.2.2</jackson2.version>
     <flumeVersion>1.3.1</flumeVersion>
