--- a/log4j-osgi/core-osgi-reduced/pom.xml
+++ b/log4j-osgi/core-osgi-reduced/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j</artifactId>
-    <version>2.0-beta9-SNAPSHOT</version>
+    <version>2.0-beta9</version>
     <relativePath>../../</relativePath>
   </parent>
   <groupId>org.apache.logging.log4j.osgi</groupId>
@@ -49,7 +49,7 @@
             <phase>generate-sources</phase>
             <configuration>
               <tasks>
-                <mkdir dir="target/classes"/>
+                <mkdir dir="target/classes" />
               </tasks>
             </configuration>
             <goals>
