--- a/log4j-osgi/pom.xml
+++ b/log4j-osgi/pom.xml
@@ -42,6 +42,7 @@
   <modules>
     <module>core-osgi-async</module>
     <module>core-osgi-jpa</module>
+    <module>core-osgi-legacy-api</module>
     <module>core-osgi-net</module>
     <module>core-osgi-nosql-couch</module>
     <module>core-osgi-nosql-mongo</module>
