--- a/log4j-osgi/pom.xml
+++ b/log4j-osgi/pom.xml
@@ -47,6 +47,8 @@
     <module>core-osgi-nosql-couchdb</module>
     <module>core-osgi-nosql-mongodb</module>
     <module>core-osgi-reduced</module>
+    <module>log4j-to-slf4j</module>
+    <module>slf4j-to-log4j</module>
   </modules>
 </project>
 
